--- a/Factory/Views/Engineers/Details.cshtml
+++ b/Factory/Views/Engineers/Details.cshtml
@@ -27,6 +27,7 @@ else
 }
 
 
+<button class="btn btn-dark">@Html.ActionLink($"Add machine to {Model.EngineerName}", "AddMachine")</button>
 <button class="btn btn-info">@Html.ActionLink("Back to list of Engineers", "Index")</button>
 <button class="btn btn-danger">@Html.ActionLink("Remove this engineer", "Delete", new { id = Model.EngineerId })</button>
 <button class="btn btn-success">@Html.ActionLink("Back to home page", "Index", "Home")</button>
