create view for Add engineer to the machine get route

--- a/Factory/Views/Engineers/AddMachine.cshtml
+++ b/Factory/Views/Engineers/AddMachine.cshtml
@@ -4,7 +4,7 @@
 
 @model Factory.Models.Engineer
 
-<h3>Add a license</h3>
+<h3>Add a license for @Model.EngineerName</h3>
 
 @using (Html.BeginForm())
 {
