--- a/Factory/Views/Machines/Details.cshtml
+++ b/Factory/Views/Machines/Details.cshtml
@@ -26,7 +26,7 @@ else
   </ul>
 }
 
-
+<button class="btn btn-dark">@Html.ActionLink($"Add engineer to {Model.MachineName}", "AddEngineer", new { id = Model.MachineId})</button>
 <button class="btn btn-info">@Html.ActionLink("Back to list of Machines", "Index")</button>
 <button class="btn btn-danger">@Html.ActionLink("Remove this machine", "Delete", new { id = Model.MachineId })</button>
 <button class="btn btn-success">@Html.ActionLink("Back to home page", "Index", "Home")</button>
