--- a/Factory/Views/Machines/Edit.cshtml
+++ b/Factory/Views/Machines/Edit.cshtml
@@ -9,8 +9,8 @@
 @using (Html.BeginForm())
 {
   @Html.HiddenFor(machine => machine.MachineId);
-  @Html.LabelFor(machine => machine.MachineId)
-  @Html.TextBoxFor(machine => machine.MachineId);
+  @Html.LabelFor(machine => machine.MachineName)
+  @Html.TextBoxFor(machine => machine.MachineName);
 
   <button class="btn btn-success" type="submit">Edit Details</button>
 }
